Scala_Lesson_1/Scala_Lesson_1
// automatic assignment to var
scala> 8*5+2
res0: Int = 42

// val declaration
scala> val answer = 8*5+2
answer: Int = 42

scala> 0.5*answer
res5: Double = 21.0

// val cannot be reassigned
scala> answer = 0
<console>:12: error: reassignment to val
       answer = 0
              ^
// var declaration
scala> var counter=0
counter: Int = 0

// var can be reassigned
scala> counter=1
counter: Int = 1

// multiple val declarations
scala> val xmax, ymax = 100
xmax: Int = 100
ymax: Int = 100

// multiple var declarations
scala> var greeting, message: String = null
greeting: String = null
message: String = null

// toString method converts any object to string
scala> 1.toString()
res6: String = 1

scala> 1.to(10)
res7: scala.collection.immutable.Range.Inclusive = Range(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)

scala> "Hello".intersect("World")
res8: String = lo

//Type conversions through methods not type casts
scala> "99.44".toDouble
res9: Double = 99.44

//Scala apply method 1
scala> "Hello"(4)
res0: Char = o

scala> "Hello".apply(4)
res1: Char = o

//Scala apply method 2
scala> BigInt("1234567890")
res2: scala.math.BigInt = 1234567890

scala> BigInt.apply("1234567890")
res3: scala.math.BigInt = 1234567890

//Scala apply method 3
scala> Array(1,4,9,16)
res5: Array[Int] = Array(1, 4, 9, 16)

scala> Array.apply(1,4,9,16)
res7: Array[Int] = Array(1, 4, 9, 16)

//patch method
scala> "Harry".patch(1,"ung",2)
res6: String = Hungry